# autoencodeSVJ

./: .gitignore  README.md  change_tab.sh  driver.py  fullMethod.py  lucScript.py  plotAUC.py  py2to3.sh  run.sh  runAnalysis.py  test.py
bdt/: bdt.py  (+4 more)
preselection/: CMakeCache.txt  CMakeLists.txt  Helpers.hpp  LorentzMock.h  ParallelTreeChain.h  SVJFinder.h  SVJselection.cpp  runSelections.sh  runSelections.sub
preselection/include/: Helpers.hpp  SVJFinder.hpp
preselection/inputFileLists/: input_file_list.txt  input_file_list__old_m1500_r15.txt  input_file_list_all.txt  input_file_list_m1500_r15.txt  input_file_list_m1500_r30.txt  input_file_list_m1500_r45.txt  input_file_list_m1500_r60.txt  input_file_list_m1500_r75.txt  input_file_list_m2000_r15.txt  input_file_list_m2000_r30.txt  input_file_list_m2000_r75.txt  input_file_list_m2500_r15.txt  input_file_list_m2500_r30.txt  input_file_list_m2500_r45.txt  input_file_list_m2500_r60.txt  input_file_list_m2500_r75.txt  input_file_list_m3000_r15.txt  input_file_list_m3000_r30.txt  input_file_list_m3000_r45.txt  input_file_list_m3000_r60.txt  input_file_list_m3000_r75.txt  input_file_list_m3500_r15.txt  input_file_list_m3500_r75.txt  input_file_list_m4000_r15.txt  input_file_list_m4000_r30.txt  input_file_list_m4000_r45.txt  input_file_list_m4000_r60.txt  input_file_list_m4000_r75.txt
preselection/results/: QCD_cutflow.txt  QCD_selection.txt  SVJ_m1500_r15_cutflow.txt  SVJ_m1500_r15_old_cutflow.txt  SVJ_m1500_r15_old_selection.txt  SVJ_m1500_r15_selection.txt  SVJ_m1500_r30_cutflow.txt  SVJ_m1500_r30_selection.txt  (+47 more)
(+3288 files in other folders)
